# python-sdk

./: README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/: build-layr8-agent.md
.github/workflows/: ci.yaml
examples/: chat.py  durable_handler.py  echo_agent.py
src/layr8/: __init__.py  backoff.py  channel.py  client.py  config.py  credentials.py  errors.py  handler.py  message.py  presentations.py  rest.py
tests/: integration_test.py  test_client.py  test_config.py  test_credentials.py  test_handler.py  test_message.py  test_presentations.py  test_reconnect.py  test_rest.py
