[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layr8"
version = "0.1.0"
description = "Layr8 DIDComm Agent SDK for Python"
readme = {text = "Layr8 DIDComm Agent SDK for Python", content-type = "text/plain"}
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/layr8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
